--- a/deploy/docker/orchestrator/Dockerfile
+++ b/deploy/docker/orchestrator/Dockerfile
@@ -35,7 +35,7 @@ COPY orchestrator/go.mod go.mod
 COPY orchestrator/go.sum go.sum
 
 # Copy pkg/security dependency (required by orchestrator)
-COPY pkg/security/ ../pkg/security/
+COPY pkg/security/ /workspace/../pkg/security/
 
 # Download dependencies
 RUN go mod download
