--- a/deploy/docker/vnf-operator/Dockerfile
+++ b/deploy/docker/vnf-operator/Dockerfile
@@ -32,6 +32,13 @@ WORKDIR /workspace
 COPY adapters/vnf-operator/go.mod go.mod
 COPY adapters/vnf-operator/go.sum go.sum
 
+# Copy pkg/security module (needed for transitive dependencies)
+# The go.mod may have indirect dependencies on pkg/security through other modules
+COPY pkg/security /pkg/security
+
+# Copy api module for local replace directive
+COPY adapters/vnf-operator/api /workspace/api
+
 # Download dependencies
 RUN go mod download
 
