fix: Resolve Docker build failures for Go module dependencies
Root Cause Analysis:
The CI/CD pipeline was failing during the Docker build process for TN agent,
TN manager, and orchestrator components. The error occurred at the
'go mod download' step with:
  "reading /pkg/security/go.mod: no such file or directory"

Problem:
The Dockerfiles were incorrectly copying the pkg/security module to
'/workspace/../pkg/security/' when the build context was the repository root.
Since WORKDIR was set to '/workspace', the Go module replacement directive
'../pkg/security' resolved to '/pkg/security', but the files were copied to
a different location, causing the module resolution to fail.

Solution:
1. Fixed the COPY instruction to place pkg/security at '/pkg/security/'
2. Moved the pkg/security COPY before 'go mod download' to ensure it's
   available when Go resolves the replace directive
3. Updated COPY syntax for go.mod/go.sum to be more explicit

Affected Files:
- deploy/docker/tn-agent/Dockerfile
- deploy/docker/tn-manager/Dockerfile
- deploy/docker/orchestrator/Dockerfile

Testing:
The fix ensures that the Go module replacement directive correctly resolves
to the pkg/security module during the Docker build process, allowing
'go mod download' to complete successfully.

Reproduction Steps (before fix):
1. Run: docker build -f deploy/docker/tn-agent/Dockerfile .
2. Build fails at 'RUN go mod download' step

Expected Outcome (after fix):
Docker builds complete successfully for all affected components.

--- a/deploy/docker/orchestrator/Dockerfile
+++ b/deploy/docker/orchestrator/Dockerfile
@@ -31,11 +31,11 @@ RUN apk update && apk upgrade && apk add --no-cache \
 WORKDIR /workspace
 
 # Copy go mod files first for better layer caching
-COPY orchestrator/go.mod go.mod
-COPY orchestrator/go.sum go.sum
+COPY orchestrator/go.mod orchestrator/go.sum ./
 
 # Copy pkg/security dependency (required by orchestrator)
-COPY pkg/security/ /workspace/../pkg/security/
+# This is needed because go.mod has a replace directive pointing to ../pkg/security
+COPY pkg/security/ /pkg/security/
 
 # Download dependencies
 RUN go mod download
