fix: Resolve additional CI/CD failures - Docker tag format and Alpine packages
Additional Issues Fixed:

1. Invalid Docker Tag Format
   - Problem: Docker tags were generated with invalid format "ghcr.io/thc1006/tn-agent:-6582dfe"
   - Root cause: type=sha,prefix={{branch}}- produced tags starting with hyphen when branch variable was empty
   - Solution: Changed to type=sha,prefix=sha- for consistent, valid tag format

2. Alpine Package Version Conflicts
   - Problem: Pinned Alpine package versions (ca-certificates=20240705-r0, etc.) not available in Alpine 3.20.3
   - Root cause: Package versions change frequently in Alpine repositories
   - Solution: Removed version pinning to use latest compatible versions while keeping apk upgrade for security

Affected Files:
- .github/workflows/production-deployment.yml (Docker tag format)
- deploy/docker/*/Dockerfile (Alpine package versions for all components)

Testing:
These changes ensure CI/CD pipeline can:
- Generate valid Docker tags for all builds
- Successfully install Alpine packages during Docker builds
- Complete container security scans

This complements the previous fix for Go module dependency resolution.

--- a/deploy/docker/orchestrator/Dockerfile
+++ b/deploy/docker/orchestrator/Dockerfile
@@ -60,12 +60,12 @@ LABEL security.base.image="alpine:3.20.3"
 LABEL security.go.version="1.24.7"
 LABEL security.scan.date="$(date -u +%Y-%m-%dT%H:%M:%SZ)"
 
-# Install runtime dependencies with pinned versions and security updates, clean cache
+# Install runtime dependencies and security updates, clean cache
 RUN apk update && apk upgrade && apk add --no-cache \
-    ca-certificates=20240705-r0 \
-    tzdata=2024a-r1 \
-    curl=8.9.0-r0 \
-    dumb-init=1.2.5-r3 && \
+    ca-certificates \
+    tzdata \
+    curl \
+    dumb-init && \
     update-ca-certificates && \
     adduser -D -s /bin/sh -u 10003 appuser && \
     rm -rf /var/cache/apk/* /tmp/* /var/tmp/*
