--- a/deploy/docker/tn-manager/Dockerfile
+++ b/deploy/docker/tn-manager/Dockerfile
@@ -58,13 +58,13 @@ LABEL security.base.image="alpine:3.20.3"
 LABEL security.go.version="1.24.7"
 LABEL security.scan.date="$(date -u +%Y-%m-%dT%H:%M:%SZ)"
 
-# Install runtime dependencies with pinned versions, clean cache
+# Install runtime dependencies, clean cache
 RUN apk update && apk upgrade && apk add --no-cache \
-    ca-certificates=20240705-r0 \
-    iproute2=6.9.0-r1 \
-    iptables=1.8.10-r3 \
-    curl=8.9.0-r0 \
-    dumb-init=1.2.5-r3 && \
+    ca-certificates \
+    iproute2 \
+    iptables \
+    curl \
+    dumb-init && \
     update-ca-certificates && \
     adduser -D -s /bin/sh -u 10007 appuser && \
     rm -rf /var/cache/apk/* /tmp/* /var/tmp/*
