--- a/deploy/docker/tn-agent/Dockerfile
+++ b/deploy/docker/tn-agent/Dockerfile
@@ -60,16 +60,16 @@ LABEL security.base.image="alpine:3.20.3"
 LABEL security.go.version="1.24.7"
 LABEL security.scan.date="$(date -u +%Y-%m-%dT%H:%M:%SZ)"
 
-# Install runtime dependencies with pinned versions for network operations, clean cache
+# Install runtime dependencies for network operations, clean cache
 RUN apk update && apk upgrade && apk add --no-cache \
-    ca-certificates=20240705-r0 \
-    iproute2=6.9.0-r1 \
-    iptables=1.8.10-r3 \
-    bridge-utils=1.7.1-r2 \
-    ethtool=6.9-r0 \
-    iperf3=3.16-r0 \
-    curl=8.9.0-r0 \
-    dumb-init=1.2.5-r3 && \
+    ca-certificates \
+    iproute2 \
+    iptables \
+    bridge-utils \
+    ethtool \
+    iperf3 \
+    curl \
+    dumb-init && \
     update-ca-certificates && \
     adduser -D -s /bin/sh -u 10006 appuser && \
     rm -rf /var/cache/apk/* /tmp/* /var/tmp/*
