--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -46,7 +46,7 @@ jobs:
         fetch-depth: 0
 
     - name: Set up Go
-      uses: actions/setup-go@v4
+      uses: actions/setup-go@v5
       with:
         go-version: ${{ env.GO_VERSION }}
 
@@ -55,8 +55,10 @@ jobs:
         mkdir -p ~/.cache/go-build
         mkdir -p ~/go/pkg/mod
         # Clean up any problematic files that might cause tar extraction errors
-        find ~/.cache/go-build -name "*.tar*" -delete 2>/dev/null || true
-        find ~/go/pkg/mod -name "golang.org" -type d -exec rm -rf {} + 2>/dev/null || true
+        sudo find ~/.cache/go-build -name "*.tar*" -delete 2>/dev/null || true
+        sudo find ~/go/pkg/mod -name "golang.org" -type d -exec rm -rf {} + 2>/dev/null || true
+        sudo chmod -R 755 ~/.cache/go-build || true
+        sudo chmod -R 755 ~/go/pkg/mod || true
 
     - name: Cache Go modules
       uses: actions/cache@v4
@@ -139,7 +141,7 @@ jobs:
       uses: actions/checkout@v4
 
     - name: Set up Go
-      uses: actions/setup-go@v4
+      uses: actions/setup-go@v5
       with:
         go-version: ${{ env.GO_VERSION }}
 
@@ -164,8 +166,10 @@ jobs:
         mkdir -p ~/.cache/go-build
         mkdir -p ~/go/pkg/mod
         # Clean up any problematic files that might cause tar extraction errors
-        find ~/.cache/go-build -name "*.tar*" -delete 2>/dev/null || true
-        find ~/go/pkg/mod -name "golang.org" -type d -exec rm -rf {} + 2>/dev/null || true
+        sudo find ~/.cache/go-build -name "*.tar*" -delete 2>/dev/null || true
+        sudo find ~/go/pkg/mod -name "golang.org" -type d -exec rm -rf {} + 2>/dev/null || true
+        sudo chmod -R 755 ~/.cache/go-build || true
+        sudo chmod -R 755 ~/go/pkg/mod || true
 
     - name: Cache Go modules
       uses: actions/cache@v4
@@ -355,7 +359,7 @@ jobs:
       uses: actions/checkout@v4
 
     - name: Set up Go
-      uses: actions/setup-go@v4
+      uses: actions/setup-go@v5
       with:
         go-version: ${{ env.GO_VERSION }}
 
