--- a/.github/workflows/enhanced-ci.yml
+++ b/.github/workflows/enhanced-ci.yml
@@ -115,12 +115,14 @@ jobs:
         echo "🔍 Analyzing repository changes..."
 
         # Initialize outputs
-        echo "should-run=true" >> $GITHUB_OUTPUT
-        echo "go-modules=true" >> $GITHUB_OUTPUT
-        echo "python-modules=false" >> $GITHUB_OUTPUT
-        echo "docker=true" >> $GITHUB_OUTPUT
-        echo "tests=true" >> $GITHUB_OUTPUT
-        echo "docs-only=false" >> $GITHUB_OUTPUT
+        cat >> $GITHUB_OUTPUT << 'EOF'
+should-run=true
+go-modules=true
+python-modules=false
+docker=true
+tests=true
+docs-only=false
+EOF
 
         # For PRs, analyze actual changes
         if [ "${{ github.event_name }}" = "pull_request" ]; then
@@ -129,27 +131,29 @@ jobs:
 
           # Check if only docs changed
           if echo "$changed_files" | grep -v -E '\.(md|txt)$|^docs/' | grep -q .; then
-            echo "docs-only=false" >> $GITHUB_OUTPUT
+            echo 'docs-only=false' >> $GITHUB_OUTPUT
           else
-            echo "docs-only=true" >> $GITHUB_OUTPUT
-            echo "should-run=false" >> $GITHUB_OUTPUT
+            cat >> $GITHUB_OUTPUT << 'EOF'
+docs-only=true
+should-run=false
+EOF
           fi
 
           # Check for specific file type changes
           if echo "$changed_files" | grep -q '\.go$\|go\.mod\|go\.sum'; then
-            echo "go-modules=true" >> $GITHUB_OUTPUT
+            echo 'go-modules=true' >> $GITHUB_OUTPUT
           fi
 
           if echo "$changed_files" | grep -q '\.py$\|requirements\.txt\|setup\.py'; then
-            echo "python-modules=true" >> $GITHUB_OUTPUT
+            echo 'python-modules=true' >> $GITHUB_OUTPUT
           fi
 
           if echo "$changed_files" | grep -q 'Dockerfile\|\.dockerignore'; then
-            echo "docker=true" >> $GITHUB_OUTPUT
+            echo 'docker=true' >> $GITHUB_OUTPUT
           fi
 
           if echo "$changed_files" | grep -q '_test\.go$\|test_.*\.py$\|tests/'; then
-            echo "tests=true" >> $GITHUB_OUTPUT
+            echo 'tests=true' >> $GITHUB_OUTPUT
           fi
         fi
 
@@ -290,13 +294,13 @@ jobs:
 
     - name: Set up Go
       if: matrix.analysis-type == 'go-analysis' || matrix.analysis-type == 'security-scan' || matrix.analysis-type == 'license-check'
-      uses: actions/setup-go@v4
+      uses: actions/setup-go@v5
       with:
         go-version: ${{ env.GO_VERSION }}
 
     - name: Set up Python
       if: matrix.analysis-type == 'python-analysis'
-      uses: actions/setup-python@v4
+      uses: actions/setup-python@v5
       with:
         python-version: ${{ env.PYTHON_VERSION }}
         cache: 'pip'
@@ -305,9 +309,10 @@ jobs:
       if: matrix.analysis-type == 'go-analysis' || matrix.analysis-type == 'security-scan' || matrix.analysis-type == 'license-check'
       run: |
         echo "🧹 Cleaning Go module cache and build cache..."
-        rm -rf ~/go/pkg/mod || true
-        rm -rf /home/runner/go/pkg/mod || true
-        rm -rf ~/.cache/go-build || true
+        sudo rm -rf ~/go/pkg/mod || true
+        sudo rm -rf /home/runner/go/pkg/mod || true
+        sudo rm -rf ~/.cache/go-build || true
+        sudo chmod -R 755 ~/go || true
         go clean -modcache || true
         go clean -cache || true
 
@@ -764,13 +769,13 @@ jobs:
 
     - name: Set up Go
       if: matrix.language == 'go'
-      uses: actions/setup-go@v4
+      uses: actions/setup-go@v5
       with:
         go-version: ${{ env.GO_VERSION }}
 
     - name: Set up Python
       if: matrix.language == 'python'
-      uses: actions/setup-python@v4
+      uses: actions/setup-python@v5
       with:
         python-version: ${{ env.PYTHON_VERSION }}
         cache: 'pip'
@@ -779,9 +784,10 @@ jobs:
       if: matrix.language == 'go'
       run: |
         echo "🧹 Cleaning Go module cache and build cache..."
-        rm -rf ~/go/pkg/mod || true
-        rm -rf /home/runner/go/pkg/mod || true
-        rm -rf ~/.cache/go-build || true
+        sudo rm -rf ~/go/pkg/mod || true
+        sudo rm -rf /home/runner/go/pkg/mod || true
+        sudo rm -rf ~/.cache/go-build || true
+        sudo chmod -R 755 ~/go || true
         go clean -modcache || true
         go clean -cache || true
 
@@ -1152,7 +1158,7 @@ jobs:
       uses: actions/checkout@v4
 
     - name: Setup Go
-      uses: actions/setup-go@v4
+      uses: actions/setup-go@v5
       with:
         go-version: ${{ env.GO_VERSION }}
 
