fix: resolve Go version compatibility and security compliance issues
- Add explicit GOTOOLCHAIN=go1.24.5 environment variables to all Dockerfiles
  to prevent inheritance of runner's Go 1.23.6 environment
- Set proper Go proxy and sum database URLs for reliable module downloads
- Update vnf-operator Dockerfile Go version label from 1.23.6 to 1.24.0
- Enhanced Kubernetes service account token justifications with compliance notes
- Document trade-offs between strict CKV_K8S_38 compliance and functionality

The go mod download failures were caused by GitHub Actions runner environment
inheriting GOTOOLCHAIN=local with Go 1.23.6, conflicting with go.mod's
requirement for Go 1.24.0+. This change ensures Docker builds use the
correct Go toolchain version specified in the container images.

Resolves container build failures and addresses security scan findings.

--- a/deploy/docker/o2-client/Dockerfile
+++ b/deploy/docker/o2-client/Dockerfile
@@ -41,7 +41,10 @@ COPY cn-dms/ cn-dms/
 COPY ran-dms/ ran-dms/
 COPY tn/ tn/
 
-# Download dependencies (after copying local packages)
+# Download dependencies (after copying local packages) with explicit toolchain
+ENV GOTOOLCHAIN=go1.24.5
+ENV GOPROXY=https://proxy.golang.org,direct
+ENV GOSUMDB=sum.golang.org
 RUN go mod download
 
 # Build the binary with security flags
