--- a/deploy/docker/tn-manager/Dockerfile
+++ b/deploy/docker/tn-manager/Dockerfile
@@ -38,7 +38,10 @@ COPY tn/manager/api/v1alpha1/ ./manager/api/v1alpha1/
 # This is needed because go.mod has a replace directive pointing to ../pkg/security
 COPY pkg/security/ ../pkg/security/
 
-# Download dependencies
+# Download dependencies with explicit toolchain
+ENV GOTOOLCHAIN=go1.24.5
+ENV GOPROXY=https://proxy.golang.org,direct
+ENV GOSUMDB=sum.golang.org
 RUN go mod download
 
 # Copy full source code
