--- a/deploy/docker/ran-dms/Dockerfile
+++ b/deploy/docker/ran-dms/Dockerfile
@@ -32,7 +32,10 @@ WORKDIR /workspace
 COPY ran-dms/go.mod go.mod
 COPY ran-dms/go.sum go.sum
 
-# Download dependencies
+# Download dependencies with explicit toolchain
+ENV GOTOOLCHAIN=go1.24.5
+ENV GOPROXY=https://proxy.golang.org,direct
+ENV GOSUMDB=sum.golang.org
 RUN go mod download
 
 # Copy source code
