--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -200,6 +200,15 @@ jobs:
       with:
         go-version: ${{ env.GO_VERSION }}
 
+    - name: Setup Kubebuilder
+      run: |
+        KUBEBUILDER_VERSION=3.10.0
+        os=$(go env GOOS)
+        arch=$(go env GOARCH)
+        curl -L https://github.com/kubernetes-sigs/kubebuilder/releases/download/v${KUBEBUILDER_VERSION}/kubebuilder_${KUBEBUILDER_VERSION}_${os}_${arch}.tar.gz | tar -xz -C /tmp/
+        sudo mv /tmp/kubebuilder_${KUBEBUILDER_VERSION}_${os}_${arch} /usr/local/kubebuilder
+        echo "/usr/local/kubebuilder/bin" >> $GITHUB_PATH
+
     - name: Validate component directory
       run: |
         # Check if component directory exists, if not look in deploy/docker/
