fix: use GOTOOLCHAIN=auto to enable automatic Go version selection
Changes all Dockerfiles from GOTOOLCHAIN=go1.24.5 to GOTOOLCHAIN=auto.
This allows Go to automatically download and use the toolchain version
specified in go.mod (1.24.0+) instead of being constrained by the
CI runner's Go 1.23.6 environment.

This should resolve the 'go mod download' failures in container builds
by ensuring the correct Go toolchain is automatically selected and used.

--- a/deploy/docker/cn-dms/Dockerfile
+++ b/deploy/docker/cn-dms/Dockerfile
@@ -33,7 +33,7 @@ COPY cn-dms/go.mod go.mod
 COPY cn-dms/go.sum go.sum
 
 # Download dependencies with explicit toolchain
-ENV GOTOOLCHAIN=go1.24.5
+ENV GOTOOLCHAIN=auto
 ENV GOPROXY=https://proxy.golang.org,direct
 ENV GOSUMDB=sum.golang.org
 RUN go mod download
