--- a/deploy/docker/o2-client/Dockerfile
+++ b/deploy/docker/o2-client/Dockerfile
@@ -42,7 +42,7 @@ COPY ran-dms/ ran-dms/
 COPY tn/ tn/
 
 # Download dependencies (after copying local packages) with explicit toolchain
-ENV GOTOOLCHAIN=go1.24.5
+ENV GOTOOLCHAIN=auto
 ENV GOPROXY=https://proxy.golang.org,direct
 ENV GOSUMDB=sum.golang.org
 RUN go mod download
