--- a/deploy/docker/ran-dms/Dockerfile
+++ b/deploy/docker/ran-dms/Dockerfile
@@ -33,7 +33,7 @@ COPY ran-dms/go.mod go.mod
 COPY ran-dms/go.sum go.sum
 
 # Download dependencies with explicit toolchain
-ENV GOTOOLCHAIN=go1.24.5
+ENV GOTOOLCHAIN=auto
 ENV GOPROXY=https://proxy.golang.org,direct
 ENV GOSUMDB=sum.golang.org
 RUN go mod download
