--- a/deploy/docker/vnf-operator/Dockerfile
+++ b/deploy/docker/vnf-operator/Dockerfile
@@ -40,7 +40,7 @@ COPY pkg/security ../pkg/security
 COPY adapters/vnf-operator/api /workspace/api
 
 # Download dependencies with explicit toolchain
-ENV GOTOOLCHAIN=go1.24.5
+ENV GOTOOLCHAIN=auto
 ENV GOPROXY=https://proxy.golang.org,direct
 ENV GOSUMDB=sum.golang.org
 RUN go mod download
