fix: update all Dockerfiles to Go 1.24.5 and fix pkg/security dependencies
- Update all Docker base images from golang:1.24.0-alpine to golang:1.24.5-alpine
- Set GOTOOLCHAIN=go1.24.5 explicitly instead of auto
- Add missing pkg/security COPY command to cn-dms Dockerfile
- Update Go version labels to 1.24.5 in all Dockerfiles
- Ensure orchestrator and cn-dms properly copy pkg/security before go mod download

This resolves the Docker build failures where modules with replace directives
for pkg/security were unable to find the dependency during build.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -205,7 +205,14 @@ jobs:
         KUBEBUILDER_VERSION=3.10.0
         os=$(go env GOOS)
         arch=$(go env GOARCH)
-        curl -L https://github.com/kubernetes-sigs/kubebuilder/releases/download/v${KUBEBUILDER_VERSION}/kubebuilder_${KUBEBUILDER_VERSION}_${os}_${arch}.tar.gz | tar -xz -C /tmp/
+        # Download first to check if it's actually gzipped
+        curl -L -o /tmp/kubebuilder.tar.gz https://github.com/kubernetes-sigs/kubebuilder/releases/download/v${KUBEBUILDER_VERSION}/kubebuilder_${KUBEBUILDER_VERSION}_${os}_${arch}.tar.gz
+        # Try to extract with gzip, fall back to plain tar if not gzipped
+        if file /tmp/kubebuilder.tar.gz | grep -q "gzip compressed"; then
+          tar -xz -C /tmp/ -f /tmp/kubebuilder.tar.gz
+        else
+          tar -x -C /tmp/ -f /tmp/kubebuilder.tar.gz
+        fi
         sudo mv /tmp/kubebuilder_${KUBEBUILDER_VERSION}_${os}_${arch} /usr/local/kubebuilder
         echo "/usr/local/kubebuilder/bin" >> $GITHUB_PATH
 
