--- a/deploy/docker/cn-dms/Dockerfile
+++ b/deploy/docker/cn-dms/Dockerfile
@@ -1,6 +1,6 @@
 # CN DMS Multi-stage Dockerfile
 # Stage 1: Build
-FROM golang:1.24.0-alpine AS builder
+FROM golang:1.24.5-alpine AS builder
 
 # Security labels and metadata
 LABEL maintainer="O-RAN MANO Team"
@@ -32,8 +32,12 @@ WORKDIR /workspace
 COPY cn-dms/go.mod go.mod
 COPY cn-dms/go.sum go.sum
 
+# Copy pkg/security module before downloading dependencies
+# This is needed because go.mod has a replace directive pointing to ../pkg/security
+COPY pkg/security/ ../pkg/security/
+
 # Download dependencies with explicit toolchain
-ENV GOTOOLCHAIN=auto
+ENV GOTOOLCHAIN=go1.24.5
 ENV GOPROXY=https://proxy.golang.org,direct
 ENV GOSUMDB=sum.golang.org
 RUN go mod download
@@ -55,7 +59,7 @@ LABEL org.opencontainers.image.title="CN DMS Runtime"
 LABEL security.scan="trivy,grype,snyk"
 LABEL security.user="non-root"
 LABEL security.base.image="alpine:3.22.1"
-LABEL security.go.version="1.24.0"
+LABEL security.go.version="1.24.5"
 LABEL security.scan.date="$(date -u +%Y-%m-%dT%H:%M:%SZ)"
 
 # Install runtime dependencies with pinned versions, clean cache
