--- a/deploy/docker/tn-manager/Dockerfile
+++ b/deploy/docker/tn-manager/Dockerfile
@@ -1,6 +1,6 @@
 # TN Manager Multi-stage Dockerfile
 # Stage 1: Build
-FROM golang:1.24.0-alpine AS builder
+FROM golang:1.24.5-alpine AS builder
 
 # Security labels and metadata
 LABEL maintainer="O-RAN MANO Team"
@@ -39,7 +39,7 @@ COPY tn/manager/api/v1alpha1/ ./manager/api/v1alpha1/
 COPY pkg/security/ ../pkg/security/
 
 # Download dependencies with explicit toolchain
-ENV GOTOOLCHAIN=auto
+ENV GOTOOLCHAIN=go1.24.5
 ENV GOPROXY=https://proxy.golang.org,direct
 ENV GOSUMDB=sum.golang.org
 RUN go mod download
@@ -61,7 +61,7 @@ LABEL org.opencontainers.image.title="TN Manager Runtime"
 LABEL security.scan="trivy,grype,snyk"
 LABEL security.user="non-root"
 LABEL security.base.image="alpine:3.22.1"
-LABEL security.go.version="1.24.0"
+LABEL security.go.version="1.24.5"
 LABEL security.scan.date="$(date -u +%Y-%m-%dT%H:%M:%SZ)"
 
 # Install runtime dependencies, clean cache
