fix: complete Go version standardization to 1.23.6
- Update all remaining 1.24.x references to 1.23.6
- Fix YAML syntax errors in enhanced-ci.yml (heredoc issues)
- Correct golang Docker image tags (remove alpine version suffix)
- Update documentation and reports to reflect Go 1.23.6
- Ensure complete consistency across all files

--- a/.github/workflows/enhanced-ci.yml
+++ b/.github/workflows/enhanced-ci.yml
@@ -131,10 +131,8 @@ jobs:
           if echo "$changed_files" | grep -v -E '\.(md|txt)$|^docs/' | grep -q .; then
             echo 'docs-only=false' >> $GITHUB_OUTPUT
           else
-            cat >> $GITHUB_OUTPUT << 'EOF'
-docs-only=true
-should-run=false
-EOF
+            echo "docs-only=true" >> $GITHUB_OUTPUT
+            echo "should-run=false" >> $GITHUB_OUTPUT
           fi
 
           # Check for specific file type changes
