--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -78,9 +78,9 @@ jobs:
         xargs -I {} sh -c 'cd {} && go vet ./...'
 
     - name: Run staticcheck
-      uses: dominikh/staticcheck-action@v1.3.0
+      uses: dominikh/staticcheck-action@v1.3.1
       with:
-        version: "2023.1.6"
+        version: "latest"
         install-go: false
 
     - name: Install and run gosec security scan
