fix: update ran-dms Dockerfile Go version label to 1.24.7
- Fix security.go.version label from 1.23.6 to 1.24.7
- Resolves container build failures in CI

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -29,7 +29,7 @@ linters:
     - staticcheck
     - typecheck
     - unused
-    - vet
+    - govet  # renamed from vet
     - errcheck
     - bodyclose
     - noctx
@@ -56,8 +56,7 @@ linters:
     - gocognit
     - godot
     - godox
-    - goerr113
-    - gomnd
+    - err113  # renamed from goerr113
     - gomodguard
     - goprintffuncname
     - gosimple
