--- a/deploy/docker/cn-dms/Dockerfile
+++ b/deploy/docker/cn-dms/Dockerfile
@@ -18,12 +18,12 @@ LABEL security.user="non-root"
 RUN adduser -D -s /bin/sh appuser
 
 # Install security updates and necessary tools, clean cache
-RUN apk update && apk upgrade && apk add --no-cache \
+RUN --mount=type=cache,target=/var/cache/apk \
+    apk add --no-cache \
     git \
     ca-certificates \
     tzdata && \
-    update-ca-certificates && \
-    rm -rf /var/cache/apk/* /tmp/* /var/tmp/*
+    update-ca-certificates
 
 # Set working directory
 WORKDIR /workspace
@@ -36,17 +36,29 @@ COPY cn-dms/go.sum go.sum
 # This is needed because go.mod has a replace directive pointing to ../pkg/security
 COPY pkg/security/ ../pkg/security/
 
-# Download dependencies with explicit toolchain
+# Set Go environment variables
 ENV GOTOOLCHAIN=go1.24.7
 ENV GOPROXY=https://proxy.golang.org,direct
 ENV GOSUMDB=sum.golang.org
-RUN go mod download
+
+# Disable workspace mode for Docker build
+ENV GOWORK=off
+
+# Download dependencies with retry mechanism
+RUN --mount=type=cache,target=/go/pkg/mod \
+    --mount=type=cache,target=/root/.cache/go-build \
+    go mod download || (sleep 2 && go mod download) || (sleep 5 && go mod download)
 
 # Copy source code
 COPY cn-dms/ .
 
-# Build the binary with security flags
-RUN CGO_ENABLED=0 GOOS=linux GOARCH=amd64 go build \
+# Build the binary with security flags and cache
+# Support multi-platform builds
+ARG TARGETOS=linux
+ARG TARGETARCH=amd64
+RUN --mount=type=cache,target=/go/pkg/mod \
+    --mount=type=cache,target=/root/.cache/go-build \
+    CGO_ENABLED=0 GOOS=${TARGETOS} GOARCH=${TARGETARCH} go build \
     -ldflags='-w -s -extldflags "-static"' \
     -a -installsuffix cgo \
     -o cn-dms cmd/main.go
@@ -59,18 +71,18 @@ LABEL org.opencontainers.image.title="CN DMS Runtime"
 LABEL security.scan="trivy,grype,snyk"
 LABEL security.user="non-root"
 LABEL security.base.image="alpine:3.22.1"
-LABEL security.go.version="1.23.6"
+LABEL security.go.version="1.24.7"
 LABEL security.scan.date="$(date -u +%Y-%m-%dT%H:%M:%SZ)"
 
-# Install runtime dependencies with pinned versions, clean cache
-RUN apk update && apk upgrade && apk add --no-cache \
+# Install runtime dependencies and create user
+RUN --mount=type=cache,target=/var/cache/apk \
+    apk add --no-cache \
     ca-certificates \
     curl \
     jq \
     dumb-init && \
     update-ca-certificates && \
-    adduser -D -s /bin/sh -u 10001 appuser && \
-    rm -rf /var/cache/apk/* /tmp/* /var/tmp/*
+    adduser -D -s /bin/sh -u 10001 appuser
 
 # Copy the binary
 COPY --from=builder /workspace/cn-dms /usr/local/bin/cn-dms
@@ -93,5 +105,5 @@ HEALTHCHECK --interval=30s --timeout=10s --start-period=45s --retries=3 \
     CMD curl -f --max-time 5 --retry 2 --retry-delay 1 http://localhost:8080/health || exit 1
 
 # Security: Run as non-root with dumb-init
-ENTRYPOINT ["/usr/bin/dumb-init", "--"]
-CMD ["/usr/local/bin/cn-dms", "--config=/config/cn-dms.yaml"]
+ENTRYPOINT ["/usr/bin/dumb-init", "--", "/usr/local/bin/cn-dms"]
+CMD ["--config=/config/cn-dms.yaml"]
