--- a/deploy/docker/ran-dms/Dockerfile
+++ b/deploy/docker/ran-dms/Dockerfile
@@ -36,7 +36,11 @@ COPY ran-dms/go.sum go.sum
 ENV GOTOOLCHAIN=go1.24.7
 ENV GOPROXY=https://proxy.golang.org,direct
 ENV GOSUMDB=sum.golang.org
-RUN go mod download
+
+# Disable workspace mode for Docker build
+ENV GOWORK=off
+
+RUN go mod download || (sleep 2 && go mod download) || (sleep 5 && go mod download)
 
 # Copy source code
 COPY ran-dms/ .
