--- a/deploy/docker/orchestrator/Dockerfile
+++ b/deploy/docker/orchestrator/Dockerfile
@@ -41,7 +41,11 @@ COPY pkg/security/ ../pkg/security/
 ENV GOTOOLCHAIN=go1.24.7
 ENV GOPROXY=https://proxy.golang.org,direct
 ENV GOSUMDB=sum.golang.org
-RUN go mod download
+
+# Disable workspace mode for Docker build
+ENV GOWORK=off
+
+RUN go mod download || (sleep 2 && go mod download) || (sleep 5 && go mod download)
 
 # Copy source code
 COPY orchestrator/ .
