--- a/deploy/docker/vnf-operator/Dockerfile
+++ b/deploy/docker/vnf-operator/Dockerfile
@@ -43,7 +43,11 @@ COPY adapters/vnf-operator/api /workspace/api
 ENV GOTOOLCHAIN=go1.24.7
 ENV GOPROXY=https://proxy.golang.org,direct
 ENV GOSUMDB=sum.golang.org
-RUN go mod download
+
+# Disable workspace mode for Docker build
+ENV GOWORK=off
+
+RUN go mod download || (sleep 2 && go mod download) || (sleep 5 && go mod download)
 
 # Copy source code
 COPY adapters/vnf-operator/ .
